取消边框，加字体大小

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             new binEnterTheDropDownBox({
                 dom: document.getElementById('box'),
                 searchControlHeightInitial:'2em',
+                placeholder:'请输入搜索框显示的内容',
                 // listItemValueArray: [
                 //     { text: '1', value: '1' },
                 //     { text: '2', value: '2' },
