beautify style in list

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         #box {
             width: 90%;
             margin: 1em auto 0;
+            height: 30px;
+            border: 1px solid red;
+            position: relative;
         }
     </style>
 </head>
